# ShapeletGeneration

./: .gitignore  CMakeLists.txt  ShapeletGenerator.cpp  TestRunner.cpp
src/: DataReader.h  FileHandler.h  InformationGain.hpp  SequenceMatching.hpp  SeriesActions.h  Shapelets.hpp  SlidingWindows.hpp  Types.hpp
src/attributes/: Attribute.h  Distance.h  Frequency.h
test/: CMakeLists.txt
test/information_gain/: CMakeLists.txt  entropy.cpp  information_gain.cpp
test/sliding_windows/: CMakeLists.txt  single_series.cpp
